--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,1 +1,14 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+body{
+    margin: 0;
+    padding:0;
+}
+.general-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  .main-container {
+    flex: 1;
+  }
