--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,14 +1,12 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-body{
-    margin: 0;
-    padding:0;
-}
-.general-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+@import './colors.module.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
   
-  .main-container {
-    flex: 1;
-  }
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', 'Tahoma', sans-serif;
+    font-size: 1em;
+}
