Cahnging main color

--- a/frontend/styles/colors.module.css
+++ b/frontend/styles/colors.module.css
@@ -1,6 +1,6 @@
 /* styles/colors.module.css */
 :root {
-    --primary-red: #EA1E24;
+    --primary-red: #FF385C;
     --primary-grey: #EBEBEB;
     --text-color: #232323;
     --background-color: #fff;
