--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -10,3 +10,7 @@ body {
     font-family: 'Roboto', 'Tahoma', sans-serif;
     font-size: 1em;
 }
+
+.button{
+    background-color: var(--primary-red)
+}
